@@ -92,6 +92,12 @@
             <artifactId>jfreechart-fx</artifactId>
             <version>1.0.1</version>
         </dependency>
+        <!-- JavaFX code editor -->
+        <dependency>
+            <groupId>org.fxmisc.richtext</groupId>
+            <artifactId>richtextfx</artifactId>
+            <version>0.11.0</version>
+        </dependency>
     </dependencies>
     <properties>
         <maven.compiler.source>22</maven.compiler.source>
@@ -131,6 +137,8 @@
                         <option>javafx.controls,javafx.fxml,javafx.swing,javafx.web</option>
                         <option>--enable-preview</option>
                         <option>--add-exports=javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED</option>
+                        <option>--add-exports=javafx.graphics/com.sun.javafx.sg.prism=ALL-UNNAMED</option>
+                        <option>--add-exports=javafx.web/com.sun.javafx.sg.prism.web=ALL-UNNAMED</option>
                     </options>
                 </configuration>
             </plugin>
@@ -142,3 +150,4 @@
         </resources>
     </build>
 </project>
+
